Fix dropdown menu alignment. #183

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -174,3 +174,7 @@ img.avatar {
     width: 100%;
 }
 
+.dropdown-menu > li > a {
+    text-align: left;
+}
+
